<fix>: Aggiunta media query           per eliminare scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,15 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
     ************************************************/
+
+@media screen and (max-width:769) and (min-width:1140px) {
+    .container{
+        width: 100%;
+    }
+}
+
+
+
 @media screen and (max-width:768px){
         /* MAIN */
     .container{
